Adicionando template de exception
